feat: Add my most recent projects on index page

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -77,26 +77,28 @@
     <div class="row">
       <ul class="work">
         <li class="filter" data-filter="all">all</li>
-        <li class="filter" data-filter=".localization">Localization</li>
-        <li class="filter" data-filter=".object-tracking">Object Tracking</li>
         <li class="filter" data-filter=".computer-vision">Computer Vision</li>
         <li class="filter" data-filter=".deep-learning">Deep Learning</li>
+        <li class="filter" data-filter=".object-tracking">Object Tracking</li>
+        <li class="filter" data-filter=".sensor-fusion">Sensor Fusion</li>
+        <li class="filter" data-filter=".localization">Localization</li>
+        <li class="filter" data-filter=".control">Control</li>
       </ul>
     </div>
     <div class="work-inner">
       <div class="row work-posts grid">
-        <div class="col-md-4 col-sm-6 mix localization" style="display: inline-block;">
+        <div class="col-md-4 col-sm-6 mix control" style="display: inline-block;">
           <a href="#">
             <figure>
               <img src="theme/img/project-1.jpg" alt="">
               <figcaption>
-                <h2>Vehicle Localization</h2>
-                <p>with a Particle Filter</p>
+                <h2>Autonomous driving</h2>
+                <p>with PID controller</p>
               </figcaption>
             </figure>
           </a>
         </div>
-        <div class="col-md-4 col-sm-6 mix object-tracking" style="display: inline-block;">
+        <div class="col-md-4 col-sm-6 mix object-tracking sensor-fusion" style="display: inline-block;">
           <a href="#">
             <figure>
               <img src="theme/img/project-2.jpg" alt="">
@@ -118,10 +120,21 @@
             </figure>
           </a>
         </div>
+        <div class="col-md-4 col-sm-6 mix localization" style="display: inline-block;">
+          <a href="#">
+            <figure>
+              <img src="theme/img/project-4.jpg" alt="">
+              <figcaption>
+                <h2>Vehicle Localization</h2>
+                <p>with a Particle Filter</p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
         <div class="col-md-4 col-sm-6 mix computer-vision" style="display: inline-block;">
           <a href="#">
             <figure>
-              <img src="theme/img/project-3.jpg" alt="">
+              <img src="theme/img/project-5.jpg" alt="">
               <figcaption>
                 <h2>Advanced Lane Finding</h2>
                 <p>with Computer Vision</p>
@@ -132,20 +145,9 @@
         <div class="col-md-4 col-sm-6 mix deep-learning" style="display: inline-block;">
           <a href="#">
             <figure>
-              <img src="theme/img/project-3.jpg" alt="">
+              <img src="theme/img/project-6.jpg" alt="">
               <figcaption>
                 <h2>Driving Behavior Cloning</h2>
-                <p>with Convolutional NN</p>
-              </figcaption>
-            </figure>
-          </a>
-        </div>
-        <div class="col-md-4 col-sm-6 mix deep-learning" style="display: inline-block;">
-          <a href="#">
-            <figure>
-              <img src="theme/img/project-3.jpg" alt="">
-              <figcaption>
-                <h2>Traffic Sign Classification</h2>
                 <p>with Convolutional NN</p>
               </figcaption>
             </figure>
