--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -10,6 +10,9 @@
 
   <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
 
+  <!-- favicon -->
+  <link rel="shortcut icon" type="image/png" href="{{ SITEURL }}/theme/img/favicon.png">
+
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="{{SITEURL}}/theme/css/bootstrap.min.css" />
 
