feat: Add Github links to projects

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -88,9 +88,9 @@
     <div class="work-inner">
       <div class="row work-posts grid">
         <div class="col-md-4 col-sm-6 mix control" style="display: inline-block;">
-          <a href="#">
+          <a href="https://github.com/gdangelo/CarND-PID-Control-Project">
             <figure>
-              <img src="theme/img/project-1.jpg" alt="">
+              <img src="theme/img/project-1.jpg" alt="Autonomous driving with PID controller">
               <figcaption>
                 <h2>Autonomous driving</h2>
                 <p>with PID controller</p>
@@ -99,9 +99,9 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 mix object-tracking sensor-fusion" style="display: inline-block;">
-          <a href="#">
+          <a href="https://github.com/gdangelo/CarND-Unscented-Kalman-Filter-Project">
             <figure>
-              <img src="theme/img/project-2.jpg" alt="">
+              <img src="theme/img/project-2.jpg" alt="Object Tracking with Sensor Fusion-based Unscented Kalman Filter">
               <figcaption>
                 <h2>Object Tracking</h2>
                 <p>with Sensor Fusion-based Unscented Kalman Filter</p>
@@ -110,9 +110,9 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 mix object-tracking computer-vision deep-learning" style="display: inline-block;">
-          <a href="#">
+          <a href="https://github.com/gdangelo/CarND-Vehicle-Detection">
             <figure>
-              <img src="theme/img/project-3.jpg" alt="">
+              <img src="theme/img/project-3.jpg" alt="Vehicle Detection and Tracking with Computer Vision and Deep Learning">
               <figcaption>
                 <h2>Vehicle Detection and Tracking</h2>
                 <p>with Computer Vision and Deep Learning</p>
@@ -121,9 +121,9 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 mix localization" style="display: inline-block;">
-          <a href="#">
+          <a href="https://github.com/gdangelo/CarND-Kidnapped-Vehicle-Project">
             <figure>
-              <img src="theme/img/project-4.jpg" alt="">
+              <img src="theme/img/project-4.jpg" alt="Vehicle Localization with a Particle Filter">
               <figcaption>
                 <h2>Vehicle Localization</h2>
                 <p>with a Particle Filter</p>
@@ -132,9 +132,9 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 mix computer-vision" style="display: inline-block;">
-          <a href="#">
+          <a href="https://github.com/gdangelo/CarND-Advanced-Lane-Lines">
             <figure>
-              <img src="theme/img/project-5.jpg" alt="">
+              <img src="theme/img/project-5.jpg" alt="Advanced Lane Finding with Computer Vision">
               <figcaption>
                 <h2>Advanced Lane Finding</h2>
                 <p>with Computer Vision</p>
@@ -143,9 +143,9 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 mix deep-learning" style="display: inline-block;">
-          <a href="#">
+          <a href="https://github.com/gdangelo/CarND-Behavioral-Cloning-P3">
             <figure>
-              <img src="theme/img/project-6.jpg" alt="">
+              <img src="theme/img/project-6.jpg" alt="Driving Behavior Cloning with Convolutional NN">
               <figcaption>
                 <h2>Driving Behavior Cloning</h2>
                 <p>with Convolutional NN</p>
