refact: Hide blog section for now

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -81,9 +81,11 @@
             {%endif %}
           {% endfor %}
         </ul>
+        <!-- Blog is coming soon...
         <div class="search-button navbar-right">
           <i class="glyphicon glyphicon-search"></i>
         </div>
+        -->
         <ul class="menu-links nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
@@ -107,14 +109,15 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Vehicle Localization with a Particle Filter</a></li>
-              <li><a href="#">Object with Sensor Fusion-based Unscented Kalman Filter</a></li>
-              <li><a href="#">Vehicle Detection and Tracking</a></li>
-              <li><a href="#">Advanced Lane Finding</a></li>
-              <li><a href="#">Driving Behavior Cloning with CNN</a></li>
-              <li><a href="#">Traffic Sign Classification with CNN</a></li>
+              <li><a href="https://github.com/gdangelo/CarND-Kidnapped-Vehicle-Project">Vehicle Localization with a Particle Filter</a></li>
+              <li><a href="https://github.com/gdangelo/CarND-Unscented-Kalman-Filter-Project">Object with Sensor Fusion-based Unscented Kalman Filter</a></li>
+              <li><a href="https://github.com/gdangelo/CarND-Vehicle-Detection">Vehicle Detection and Tracking</a></li>
+              <li><a href="https://github.com/gdangelo/CarND-Advanced-Lane-Lines">Advanced Lane Finding</a></li>
+              <li><a href="https://github.com/gdangelo/CarND-Behavioral-Cloning-P3">Driving Behavior Cloning with CNN</a></li>
+              <li><a href="https://github.com/gdangelo/CarND-PID-Control-Project">Autonomous Driving with PID controller</a></li>
             </ul>
           </li>
+          <!-- Blog is coming soon...
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -123,6 +126,7 @@
               {% endfor %}
             </ul>
           </li>
+          -->
         </ul>
         <div class="search-wrapper">
           <div class="row search-bar">
