fix: Add selector to mixitup to fix conflict with bootstrap dropdown

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -76,13 +76,13 @@
     </div>
     <div class="row">
       <ul class="work">
-        <li class="filter" data-filter="all">all</li>
-        <li class="filter" data-filter=".computer-vision">Computer Vision</li>
-        <li class="filter" data-filter=".deep-learning">Deep Learning</li>
-        <li class="filter" data-filter=".object-tracking">Object Tracking</li>
-        <li class="filter" data-filter=".sensor-fusion">Sensor Fusion</li>
-        <li class="filter" data-filter=".localization">Localization</li>
-        <li class="filter" data-filter=".control">Control</li>
+        <li class="filter" data-mixitup-control data-filter="all">all</li>
+        <li class="filter" data-mixitup-control data-filter=".computer-vision">Computer Vision</li>
+        <li class="filter" data-mixitup-control data-filter=".deep-learning">Deep Learning</li>
+        <li class="filter" data-mixitup-control data-filter=".object-tracking">Object Tracking</li>
+        <li class="filter" data-mixitup-control data-filter=".sensor-fusion">Sensor Fusion</li>
+        <li class="filter" data-mixitup-control data-filter=".localization">Localization</li>
+        <li class="filter" data-mixitup-control data-filter=".control">Control</li>
       </ul>
     </div>
     <div class="work-inner">
