chore: Minor changes for publishing purpose

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -8,17 +8,17 @@
   <meta name="description" content={{SITENAME}}>
   <meta name="author" content="{{AUTHOR}}">
 
-  <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
+  <title>{% block title %}{{SITENAME}}{% endblock title %}</title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" type="image/png" href="{{ SITEURL }}/theme/img/favicon.png">
+  <link rel="shortcut icon" type="image/png" href="{{SITEURL}}/theme/img/favicon.png">
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="{{SITEURL}}/theme/css/bootstrap.min.css" />
 
   <!-- Custom styles -->
-  <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css" />
-  <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="{{SITEURL}}/theme/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="{{SITEURL}}/theme/css/font-awesome.min.css">
   <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=PT+Serif:400,700|Roboto:400,500,700'>
 
   <!-- JQuery -->
@@ -65,7 +65,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{{SITEURL}}">{{AUTHOR}}</a>
+        <a class="navbar-brand" href="{{SITEURL}}/">{{AUTHOR}}</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
