feat: Change button/links color for small devices in about section

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -57,7 +57,7 @@
             I am a Computer Engineer with a Passion for Deep Learning and Self-Driving Cars. I am currently enrolled in the Machine Learning and Self-Driving Cars Nanodegree programs at Udacity.<br/><br/>
             Take a look at my <a href="#work" class="highlight smooth-scroll">work</a>, <a href="#blog" class="highlight smooth-scroll">read my blog</a>, or <a href="#contact" class="highlight smooth-scroll">get in touch</a>!
           </p>
-          <a href="{{SITEURL}}/about" type="button" class="btn btn-lg btn-white-rounded">Want to know more?</a>
+          <a href="{{SITEURL}}/about" type="button" class="btn btn-lg btn-rounded">Want to know more?</a>
         </div>
       </div>
     </div>
@@ -174,7 +174,7 @@
       {% endfor %}
       <h2>...</h2>
     </div>
-    <a href="#" type="button" class="btn btn-lg btn-white-rounded">Coming Soon</a>
+    <a href="#" type="button" class="btn btn-lg btn-rounded">Coming Soon</a>
   </div>
 </section>
 
