--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -28,16 +28,16 @@ section.grey {
   text-transform: capitalize;
   font-size: 45px;
 }
-a[type="button"].btn-white-rounded {
+a[type="button"].btn-rounded {
   margin-top: 50px;
   border-radius: 4px;
-  border-color: #fff;
-  color: #fff;
+  border-color: #000;
+  color: #000;
   background-color: transparent;
   -webkit-transition: all 250ms ease;
   transition: all 250ms ease;
 }
-a[type="button"].btn-white-rounded:hover {
+a[type="button"].btn-rounded:hover {
   border-color: #ffca2b;
 }
 
@@ -358,16 +358,6 @@ a[type="button"].btn-white-rounded:hover {
 .about-section {
   background-color: #F7F7F7;
 }
-@media (min-width: 768px) {
-  .about-section {
-    background-image: url(../../theme/img/greg_blurred_gray.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 0px 0px;
-    clear: both;
-    color: #fff;
-  }
-}
 .about-section .section-title {
   margin-bottom: 30px;
 }
@@ -381,15 +371,37 @@ a[type="button"].btn-white-rounded:hover {
   font-size: 17px;
 }
 a.highlight {
-  color: #fff;
+  color: #000;
   text-decoration: none;
   border-bottom: 2px solid #ffc932;
 }
 a.highlight:visited,
 a.highlight:hover,
 a.highlight:active {
-  color: #fff;
+  color: #000;
   text-decoration: none;
+}
+@media (min-width: 768px) {
+  .about-section {
+    background-image: url(../../theme/img/greg_blurred_gray.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 0px 0px;
+    clear: both;
+    color: #fff;
+  }
+  a.highlight {
+    color: #fff;
+  }
+  a.highlight:visited,
+  a.highlight:hover,
+  a.highlight:active {
+    color: #fff;
+  }
+  .about-section a.btn-rounded {
+    color: #fff;
+    border-color: #fff;
+  }
 }
 
 /* Homepage styles : Work section
@@ -570,6 +582,10 @@ figcaption p {
 .blog-section .categories .category-link:hover {
   background: linear-gradient(0deg, #ffca2b, #fcd86c);
   transform: scale(1.05);
+}
+.blog-section a.btn-rounded {
+  color: #fff;
+  border-color: #fff;
 }
 
 /* Homepage styles : Contact section
