--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -11,7 +11,7 @@
   <title>{% block title %}{{SITENAME}}{% endblock title %}</title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" type="image/png" href="{{SITEURL}}/theme/img/favicon.png">
+  <link rel="shortcut icon" type="image/png" href="{{SITEURL}}/favicon.png">
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="{{SITEURL}}/theme/css/bootstrap.min.css" />
